Configurar conexion con Railway

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-DB_PASSWORD=root1234
+DB_HOST=shuttle.proxy.rlwy.net
+DB_PORT=19259
+DB_USER=root
+DB_PASSWORD=HZYRBwyQmfQBwRBwaycDQkRXjeOQyiiT
+DB_NAME=railway
