--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-DB_HOST=shuttle.proxy.rlwy.net
-DB_PORT=19259
-DB_USER=root
-DB_PASSWORD=HZYRBwyQmfQBwRBwaycDQkRXjeOQyiiT
-DB_NAME=railway
+DB_PASSWORD=root1234
+PORT=3001
